Fixed emojis vertical align

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -47,6 +47,7 @@
   &__emoji {
     display: inline-block;
     max-width: 2rem;
+    vertical-align: top;
 
     &--laptop {
       margin-left: 0.5rem;
